--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: ruby
 rvm:
  - 2.1.0-p0
+ before_script:
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
 script: 
   - bundle exec rake db:schema:load
   - bundle exec rake db:test:prepare
